--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -5,6 +5,7 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   <link href="{% static "css/base.css" %}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -40,6 +41,29 @@
         {% block content %}
         {% endblock %}
     </div>
+<script type="text/javascript" src="{% static "js/jquery-3.2.1.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/jquery.cookie.js" %}"></script>
+
+<script type="text/javascript">
+
+    var csrftoken = $.cookie('csrftoken');
+     function csrfSafeMethod(method) {
+         // these HTTP methods do not require CSRF protection
+         return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+     }
+     $.ajaxSetup({
+         beforeSend: function(xhr, settings) {
+             if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                 xhr.setRequestHeader("X-CSRFToken", csrftoken);
+             }
+         }
+     });
+
+        $(document).ready(function(){
+            {% block domready %}
+            {% endblock %}
+        });
+</script>
 </body>
 
 </html>
